$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 
Version 2.0-0 (opened September 3, 2011)

	* opened the release candidate ov vegan_2.0-0.

Version 1.92-2 (closed September 3, 2011)

	* monoMDS: saves and displays info on the dissimilarities used,
	and displays the number of points. Checks that input is
	dissimilarities, and warns on negative ones.

	* MDSrotate: metaMDSrotate() was renamed to MDSrotate(), and
	metaMDSrotate() was .Deprecated. 

	* meandist: warns if some dissimilarities are negative (small
	negative values are tolerated).

	* vegandocs: copied branches/1.17/inst/NEWS as ONEWS (old news),
	and adapted vegandocs. Expanded documentation of vegandocs().
	
Version 1.92-1 (closed August 28, 2011)

	* adonis, betadisper, mrpp: check that dissimilarities are
	non-negative (small negative values are tolerated). The test was
	not added to meandist: there may be legitimate usages for
	correlation-like objects although summary.meandist() is
	invalid. The addition was triggered by a user who tried to analyse
	Chase et al. Raup-Crick values in the range -1 .. +1 in
	betadisper().

	* anosim: warn if some dissimilarities are negative. Function can
	handle negative dissimilarities because it is based on ranks, but
	probably this is a user error (but can be intentional and
	correct).

	* metaMDSrotate: can rotate monoMDS() results.

	* monoMDS: gained argument 'pc' (defaults TRUE) to rotate the
	final scores to principal components.

	* specaccum, fitspecaccum: gained predict() methods. With
	specaccum() predict(..., newdata) can estimate values for
	'newdata' with linear or spline interpolation if necessary.
	Without 'newdata' the function returns the the fitted expected
	richness.  With fitspecaccum(), the predict.nls() is performed to
	each fitted model. Function fitspecaccum() is written so that
	default fitted(), residuals() and coef() work.

	* specpool: failed if 'pool' had NA values or empty factor