@@ -1,7 +1,7 @@
 "initMDS" <-
   function(x, k=2)
 {
-  nr <- attributes(x)$Size
+  nr <- attr(x, "Size")
   res <- runif(nr*k)
   dim(res) <- c(nr,k)
   res
